prevent wrapping of footer list items so they don't take up more than one line

--- a/app/assets/stylesheets/components/_session_form.scss
+++ b/app/assets/stylesheets/components/_session_form.scss
@@ -291,6 +291,8 @@ li {
   font-weight: bold;
   padding: 5px;
   margin: 5px;
+  width: 100%;
+  white-space: nowrap;
 }
 
 #copyright {
